--- a/CSharpFunctionalExtensions.AwesomeAssertions/CSharpFunctionalExtensions.AwesomeAssertions.csproj
+++ b/CSharpFunctionalExtensions.AwesomeAssertions/CSharpFunctionalExtensions.AwesomeAssertions.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
         <IsPackable>true</IsPackable>
         <PackageId>CSharpFunctionalExtensions.AwesomeAssertions</PackageId>
-        <Version>1.1.0</Version>
+        <Version>9.3.0</Version>
         <Authors>Kuurama</Authors>
         <Company>Kuurama</Company>
         <Product>CSharpFunctionalExtensions.AwesomeAssertions</Product>
@@ -24,6 +24,9 @@
         <PackageIcon>icon.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageReleaseNotes>
+            Version 9.3.0:
+            - Support of AwesomeAssertions 9.3.0
+            - .NET 10.0 Compatible
             Version 1.1.0:
             - Support of AwesomeAssertions 9.0.0
             Version 1.0.1:
@@ -46,7 +49,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AwesomeAssertions" Version="9.0.0" />
+        <PackageReference Include="AwesomeAssertions" Version="9.3.0" />
         <PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0"/>
     </ItemGroup>
 
